<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_marginTop="64dp"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="64dp"
            android:id="@+id/errorTitleView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/error_title" />

        <TextView
            android:id="@+id/errorMessageView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:textColor="#666"
            android:textSize="16sp"
            android:text="@string/error_message" />


        <androidx.cardview.widget.CardView
            android:id="@+id/beerCard"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:scaleType="center"
                    android:adjustViewBounds="true"
                    android:id="@+id/previewView"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:text="Shipwrecker Circus (w/ Oskar Blues)" />

                <TextView
                    android:id="@+id/descriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="#666"
                    android:textSize="14sp"
                    tools:text="In collaboration with the awesome Oskar Blues from Colorado, we created this big, twisted 10.5% American style barley wine. Big boozy aromas and a sweet viscosity, packed in with some heavy-hitting C-hops, for an intense bitterness to balance this full-bodied malt monster." />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ingredientsView"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#666"
            android:textSize="20sp"
            android:text="@string/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/maltCard"
            android:layout_margin="16dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="Malt"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <View
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/malt_recycler_view"
                    tools:listitem="@layout/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hopsCard"
            android:layout_margin="16dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Hops"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <View
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/hop_recycler_view"
                    tools:listitem="@layout/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tipsTitleView"
            android:layout_margin="16dp"
            android:textColor="#666"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tipsView"
            android:layout_margin="16dp"
            android:textColor="#999"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            tools:text="Age this beer in the cellar for a few months to allow the warm alcohol flavours to reduce."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/credit"
            android:id="@+id/creditView"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>